--- a/Junior/part_001/pom.xml
+++ b/Junior/part_001/pom.xml
@@ -8,7 +8,7 @@
     <packaging>jar</packaging>
     <parent>
         <groupId>ru.job4j</groupId>
-        <artifactId>junior</artifactId>
+        <artifactId>junior2</artifactId>
         <version>2.0</version>
     </parent>
 </project>
